kenzo: Enable backlight trigger for LCD
Disable backlight when blanked out.

Ref: CRACKLING-626
Change-Id: Ifc698c1470b086b0e1f083c3c234f272988d108c

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -29,6 +29,9 @@ import init.qcom.usb.rc
 import init.target.rc
 
 on early-init
+    # Turn off backlight on blank
+    write /sys/class/leds/lcd-backlight/trigger "backlight"
+
     mkdir /firmware 0771 system system
     mkdir /system 0777 root root
     symlink /data/tombstones /tombstones
