kenzo: Add missing blobs
* Add gatekeeper HAL
* Add keystore HAL
* Add missing slim_daemon
* Add missing peripheral manager bins and service to call it
* Fix camera HAL name

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -674,6 +674,11 @@ on property:persist.sys.display_eyecare=4
 on charger
     start qcom-post-boot
 
+service per_mgr /system/bin/pm-service
+    class core
+    user system
+    group system net_raw
+
 service qlogd /system/xbin/qlogd
     socket qlogd stream 0662 system system
     class main
