kenzo:Fix buttons illumination
* Make hardware-keys backlight adjustable
* Set default backlight brightness to 60%

Change-Id: I160bd3b3b17d24ce8e430bc4b29478843ced1da7
Signed-off-by: Warmachine28 <ideologuejyotirmay@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -94,6 +94,9 @@ on boot
     chown net_bt bluetooth /sys/class/rfkill/rfkill0/device/extldo
     chmod 0660 /sys/class/rfkill/rfkill0/device/extldo
 
+    #Liblight
+    chown system system /sys/class/leds/button-backlight/brightness
+
     #Create QMUX deamon socket area
     mkdir /dev/socket/qmux_radio 0770 radio radio
     chmod 2770 /dev/socket/qmux_radio
