kenzo: Set perms on debugfs node
Change-Id: Ib470a3f170d7a4e90e0d77d6762e6575f1ac09db

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -39,7 +39,7 @@ on early-init
     mkdir /dsp 0771 media media
 
 on init
-    mount debugfs /sys/kernel/debug /sys/kernel/debug
+    mount debugfs /sys/kernel/debug /sys/kernel/debug mode=755
 
     # Set permissions for persist partition
     mkdir /persist 0771 system system
