kenzo: Enable QTI Telephony
Change-Id: I5c9410888170606f04c96c221874e8304e595083

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -324,6 +324,10 @@ service rmt_storage /system/bin/rmt_storage
     class core
     user root
 
+service tftp_server /system/bin/tftp_server
+    class main
+    user root
+
 service config_bt_addr /system/bin/btnvtool -O
     class core
     user bluetooth
