--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -39,6 +39,8 @@ on early-init
     mkdir /dsp 0771 media media
 
 on init
+    mount debugfs /sys/kernel/debug /sys/kernel/debug
+
     # Set permissions for persist partition
     mkdir /persist 0771 system system
 
