kenzo: shim libs at init
Change-Id: I394d1a8f3485b118f998d027bf1d7ce416d07c08

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -27,7 +27,7 @@
 #
 #
 
-on early-init
+on init
     export LD_SHIM_LIBS "/system/vendor/lib64/lib-imsvt.so|libshims_ims.so:/system/bin/mm-qcamera-daemon|libshims_camera.so"
 
 on post-fs data
